--- a/HTML.md/index.html
+++ b/HTML.md/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Jobs in % Chance</h1>
+<h1>Jobs Chancen und die Wahrscheinlichkeit in %</h1>
 <p>Bauarbeiter 40% 
     Maurer 20%
     Ingenieur 10%
@@ -15,7 +15,10 @@
 </p>
 
 <a href=https://de.wikipedia.org/wiki/Bauberuf>Höste Wahrscheinlichkeit</a>
-<a href=https://de.wikipedia.org/wiki/Ingenieur>Niedrikste Wahrscheinlichkeit</a>
+<a href=https://de.wikipedia.org/wiki/Ingenieur>Niedrigste Wahrscheinlichkeit</a>
+<img src="https://th.bing.com/th/id/OIP.TRvel03aeSFhVEkKGXdQgwHaFW?rs=1&pid=ImgDetMain">
+ <img src="https://th.bing.com/th/id/OIP.5dpggcSPGQtCoLdO5lyaUwHaDg?rs=1&pid=ImgDetMain">
+
 
 </body>
 </html>
